# smappee_ev

./: .codespellrc  .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml_old  .ruff.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cspell.json  hacs.json  pyproject.toml  pytest.ini  requirements-test.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: feature_request.md  smappee-ev-bug-report.md
.github/workflows/: hacsaction  hacsaction.yaml  hassfest.yaml  lint.yaml  release.yaml  tests.yaml  validate.yaml
blueprints/automation/: sun_led.yaml  (+2 more)
docs/: EVCC.md  HA_integration.md  Smappee_modbus.md  Smappee_mqtt.md  emhass.md  modbus.yaml  openEMS.md
tests/: __init__.py  conftest.py  factories.py  helpers.py  test_architecture_imports.py  test_base_entities.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_const.py  test_coordinator.py  test_coordinator_coverage.py  test_dashboard_client.py  test_device_handle.py  test_diagnostics.py  test_discovery.py  test_entity.py  test_functional_flows.py  test_helpers.py  test_init.py  test_init_coverage.py  test_init_error_cases.py  test_init_extra.py  test_init_migration.py  test_models.py  test_mqtt_advanced.py  test_mqtt_gateway.py  test_mqtt_simple.py  test_number.py  test_platforms.py  test_restore_entity.py  test_select.py  test_sensor_support_grid.py  test_sensor_values.py  test_services.py  test_services_yaml.py  test_session_sensor.py  test_stability.py  test_switch.py
(+63 files in other folders)
